cooper-ext-wilmascope/src/main/java/org/wilmascope/gmlparser/GMLParser.java
/* Generated By:JavaCC: Do not edit this line. GMLParser.java */
package org.wilmascope.gmlparser;

public class GMLParser implements GMLParserConstants {

	// end lexical definitions, parser start
	final public void graph(GraphClient g) throws ParseException {
		jj_consume_token(GRAPH);
		jj_consume_token(28);
		stmtList(g);
		jj_consume_token(29);
		jj_consume_token(0);
	}

	final public void stmtList(GraphClient g) throws ParseException {
		String s;
		System.out.println("Parsing the GML graph...");
		label_1: while (true) {
			switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
			case VERSION:
			case DIRECTED:
			case NODE:
			case EDGE:
				;
				break;
			default:
				jj_la1[0] = jj_gen;
				break label_1;
			}
			stmt(g);
		}
	}

	final public void stmt(GraphClient g) throws ParseException {
		NodeClient n;
		Token t1, t2, t3, t4, w, h;
		switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
		case VERSION:
			jj_consume_token(VERSION);
			jj_consume_token(NUM);
			break;
		case DIRECTED:
			jj_consume_token(DIRECTED);
			jj_consume_token(NUM);
			break;
		case NODE:
			jj_consume_token(NODE);
			jj_consume_token(28);
			t1 = t2 = w = h = null;
			label_2: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case ID:
					jj_consume_token(ID);
					t1 = jj_consume_token(NUM);
					break;
				case LABEL:
					jj_consume_token(LABEL);
					t2 = jj_consume_token(CTLSTRING);
					break;
				case 30:
					jj_consume_token(30);
					jj_consume_token(28);
					label_3: while (true) {
						switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case 31:
						case 32:
						case 33:
						case 34:
						case 35:
							;
							break;
						default:
							jj_la1[1] = jj_gen;
							break label_3;
						}
						switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
						case 31:
							jj_consume_token(31);
							t3 = jj_consume_token(DEC);
							break;
						case 32:
							jj_consume_token(32);
							t3 = jj_consume_token(DEC);
							break;
						case 33:
							jj_consume_token(33);
							w = jj_consume_token(DEC);
							break;
						case 34:
							jj_consume_token(34);
							h = jj_consume_token(DEC);
							break;
						case 35:
							jj_consume_token(35);
							t3 = jj_consume_token(CTLSTRING);
							break;
						default:
							jj_la1[2] = jj_gen;
							jj_consume_token(-1);
							throw new ParseException();
						}
					}
					jj_consume_token(29);
					break;
				default:
					jj_la1[3] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case ID:
				case LABEL:
				case 30:
					;
					break;
				default:
					jj_la1[4] = jj_gen;
					break label_2;
				}
			}
			float width = 0,
			height = 0;
			if (w != null)
				width = Float.parseFloat(w.image);
			if (h != null)
				height = Float.parseFloat(h.image);
			if (t2 == null) {
				System.err.println("WARNING: Node id=" + t1.image + " has no label!");
				g.addNode(t1.image, "", width, height);
			} else {
				g.addNode(t1.image, t2.image, width, height);
			}
			jj_consume_token(29);
			break;
		case EDGE:
			jj_consume_token(EDGE);
			jj_consume_token(28);
			t3 = null;
			t4 = null;
			jj_consume_token(SOURCE);
			t1 = jj_consume_token(NUM);
			jj_consume_token(TARGET);
			t2 = jj_consume_token(NUM);
			label_4: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LABEL:
				case 36:
					;
					break;
				default:
					jj_la1[5] = jj_gen;
					break label_4;
				}
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case LABEL:
					jj_consume_token(LABEL);
					t3 = jj_consume_token(CTLSTRING);
					break;
				case 36:
					jj_consume_token(36);
					jj_consume_token(NUM);
					break;
				default:
					jj_la1[6] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			jj_consume_token(30);
			jj_consume_token(28);
			label_5: while (true) {
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 37:
				case 38:
				case 39:
					;
					break;
				default:
					jj_la1[7] = jj_gen;
					break label_5;
				}
				switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
				case 37:
					jj_consume_token(37);
					t4 = jj_consume_token(CTLSTRING);
					break;
				case 38:
					jj_consume_token(38);
					jj_consume_token(CTLSTRING);
					break;
				case 39:
					jj_consume_token(39);
					jj_consume_token(NUM);
					break;
				default:
					jj_la1[8] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			jj_consume_token(29);
			if (t3 == null) {
				g.addEdge(t1.image, t2.image, t4.image);
			} else {
				g.addEdge(t1.image, t2.image, t3.image, t4.image);
			}
			jj_consume_token(29);
			break;
		default:
			jj_la1[9] = jj_gen;
			jj_consume_token(-1);
			throw new ParseException();
		}
	}

	public GMLParserTokenManager token_source;
	SimpleCharStream jj_input_stream;
	public Token token, jj_nt;
	private int jj_ntk;
	private int jj_gen;
	final private int[] jj_la1 = new int[10];
	final private int[] jj_la1_0 = { 0x1b0000, 0x80000000, 0x80000000, 0x40600000, 0x40600000, 0x400000, 0x400000, 0x0,
			0x0, 0x1b0000, };
	final private int[] jj_la1_1 = { 0x0, 0xf, 0xf, 0x0, 0x0, 0x10, 0x10, 0xe0, 0xe0, 0x0, };

	public GMLParser(java.io.InputStream stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new GMLParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(java.io.InputStream stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	public GMLParser(java.io.Reader stream) {
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new GMLParserTokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(java.io.Reader stream) {
		jj_input_stream.ReInit(stream, 1, 1);
		token_source.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	public GMLParser(GMLParserTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	public void ReInit(GMLParserTokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 10; i++)
			jj_la1[i] = -1;
	}

	final private Token jj_consume_token(int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = token).next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		if (token.kind == kind) {
			jj_gen++;
			return token;
		}
		token = oldToken;
		jj_kind = kind;
		throw generateParseException();
	}

	final public Token getNextToken() {
		if (token.next != null)
			token = token.next;
		else
			token = token.next = token_source.getNextToken();
		jj_ntk = -1;
		jj_gen++;
		return token;
	}

	final public Token getToken(int index) {
		Token t = token;
		for (int i = 0; i < index; i++) {
			if (t.next != null)
				t = t.next;
			else
				t = t.next = token_source.getNextToken();
		}
		return t;
	}

	final private int jj_ntk() {
		if ((jj_nt = token.next) == null)
			return (jj_ntk = (token.next = token_source.getNextToken()).kind);
		else
			return (jj_ntk = jj_nt.kind);
	}

	private java.util.Vector jj_expentries = new java.util.Vector();
	private int[] jj_expentry;
	private int jj_kind = -1;

	final public ParseException generateParseException() {
		jj_expentries.removeAllElements();
		boolean[] la1tokens = new boolean[40];
		for (int i = 0; i < 40; i++) {
			la1tokens[i] = false;
		}
		if (jj_kind >= 0) {
			la1tokens[jj_kind] = true;
			jj_kind = -1;
		}
		for (int i = 0; i < 10; i++) {
			if (jj_la1[i] == jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
					if ((jj_la1_1[i] & (1 << j)) != 0) {
						la1tokens[32 + j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 40; i++) {
			if (la1tokens[i]) {
				jj_expentry = new int[1];
				jj_expentry[0] = i;
				jj_expentries.addElement(jj_expentry);
			}
		}
		int[][] exptokseq = new int[jj_expentries.size()][];
		for (int i = 0; i < jj_expentries.size(); i++) {
			exptokseq[i] = (int[]) jj_expentries.elementAt(i);
		}
		return new ParseException(token, exptokseq, tokenImage);
	}

	final public void enable_tracing() {
	}

	final public void disable_tracing() {
	}

}
